linked to Roboto fonts, tweaked font-sizes to prevent overflow

--- a/assets/css/_variables.css
+++ b/assets/css/_variables.css
@@ -1,5 +1,9 @@
 :root {
-	--primary-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+	--light-font: 'Roboto Light', Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+	--medium-font: 'Roboto Medium', Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+	--primary-font: 'Roboto', Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+
+
 	--font-weight-thin: 300;
 	--font-weight-regular: 400;
 	--font-weight-semibold: 600;
