--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -50,6 +50,7 @@ nav.vertical-navigator {
 	display: none;
 	padding-left: 0;
 	padding-right: 0;
+	font-family: var(--medium-font);
 
 	& ul {
 		list-style: none;
@@ -66,10 +67,9 @@ nav.vertical-navigator {
 
 		& a {
 			display: inline-block;
-			font-size: 1rem;
-			font-weight: 700;
-			letter-spacing: 1px;
-			line-height: 20px;
+			font-size: 21px;
+			letter-spacing: 2px;
+			line-height: 21px;
 			text-decoration: none;
 			white-space: nowrap;
 			width: 100%;
@@ -182,22 +182,23 @@ nav.vertical-navigator {
 				display: flex;
 				height: var(--header-height);
 				justify-content: space-between;
-				margin: 0;
+				margin: 0 2rem 0 0;
 				padding: 0;
 
 				& li {
 					border: none;
-					padding-left: 2%;
-					padding-right: 2%;
+					padding-left: 1.5%;
+					padding-right: 1.5%;
 					width: auto;
 				}
 
 				& a {
 					background: var(--teal);
 					color:white;
-					font-size: 15px;
+					font-size: 19px;
 					font-weight: normal;
 					line-height: 20px;
+					letter-spacing: 1px;
 					width: auto;
 				}
 			}
@@ -214,7 +215,7 @@ nav.vertical-navigator {
 			white-space: nowrap;
 
 			& a {
-				font-size: 48px;
+				font-size: 36px;
 			}
 		}
 	}
@@ -224,6 +225,6 @@ nav.vertical-navigator {
 
 @media (--large-up) {
 	header nav.vertical-navigator ul  li  a {
-		font-size: 18px;
+		font-size: 22px;
 	}
 }
